--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^8.0.1",
     "js": "^0.1.0",
     "mongoose": "^8.10.0",
+    "mongoose-paginate": "^5.0.3",
     "mongoose-paginate-v2": "^1.9.0",
     "node": "^23.7.0",
     "nodemon": "^3.1.9",
